--- a/css/style.css
+++ b/css/style.css
@@ -21,14 +21,15 @@ header{
 }
 
 .navigation{
-    display: flex;
-    justify-content: center;
+    display: block;
     background: #fff;
     max-width: 1366px;
 }
 
 .menu{
     display: flex;
+    justify-content: space-between;
+    align-items: center;
     padding: 0;
     margin-top: 0;
 
@@ -45,7 +46,7 @@ header{
     padding-right: 30px;
 }
 .menu li:nth-child(2){
-    padding-right: 15px;
+   padding-right: 15px;
 }
 
 .menu li:first-child a::before {
@@ -58,13 +59,18 @@ header{
 }
 
 .menu li:nth-child(3) a::before{
-    content: "";
-    padding-right: 20px;
+    display: block;
+    content: '';
+    /*padding-right: 20px;*/
+    width: 220px;
+}
+.menu li:nth-child(3){
+    padding-right: 50px;
 }
 
-li.menu_item2 a{
+/*li.menu_item2 a{
     list-style: none;
-}
+}*/
 
 .menu li a{
     text-decoration: none;
@@ -74,14 +80,20 @@ li.menu_item2 a{
     line-height: 16px;
     font-family: 'Open Sans', sans-serif;
 }
+.menu li:nth-child(3) a{
+    font-family: 'Oleo Script', cursive;
+    text-transform: capitalize;
+    font-size: 36px;
+    list-style: none;
+}
 
-li.menu_item1 a {
+/*li.menu_item1 a {
     font-family: 'Oleo Script', cursive;
     text-transform: capitalize;
     font-size: 36px;
     list-style: none;
 
-}
+}*/
 
 h1 {
     display: flex;
@@ -100,6 +112,7 @@ h1 {
 h2{
     color: #171d1c;
     text-align: center;
+    font-family: 'Philosopher', sans-serif;
     font-size: 48px;
     margin-top: 150px;
 
